fix bug with z-index on pagination

--- a/practicas/practica03/ejer04/css/styles.css
+++ b/practicas/practica03/ejer04/css/styles.css
@@ -130,6 +130,7 @@ body {
   display: flex;
   gap: 0.75em;
   margin-bottom: 2em;
+  z-index: 100;
 }
 
 .pagination__btn {
